# pfs_obsproc_qa_tools

./: README.md  pyproject.toml
python/obsproc/utils/: exposureTime.py
scripts/: calc_eet.py  calc_eet_no_database.py  condition.py  process_visits.pbs  process_visits.sh  sendQueue.py
src/pfs_obsproc_qa/data/: fiber_aperture_effect.csv
src/pfs_obsproc_qa/utils/: exposureTime.py  obsCondition.py  obsCondition2.py  opDB.py  qaDB.py  utils.py
