[project]
authors = [
    { name = "Kiyoto Yabe", email = "kiyoyabe@naoj.org" },
]
name = "pfs_obsproc_qa"
version = "0.1.0"
description = ""
dependencies = [
    "astropy>=5.3",
    "ipython>=8.16.0",
    "jupyter>=1.0.0",
    "logzero>=1.7.0",
    "matplotlib>=3.8.0",
    "numpy<1.24.0",
    "pandas>=2.1.0",
    "psycopg2>=2.9.8",
    "pyyaml==5.3.1",
    "scikit-learn>=1.3.1",
    "scipy>=1.9.3",
    "seaborn>=0.13.0",
    "sep>=1.2.1",
    "setuptools>=68.2.2",
    "sqlalchemy>=2.0.21",
    "toml>=0.10.2",
    "pfs-datamodel @ git+https://github.com/Subaru-PFS/datamodel.git",
    "opdb @ git+https://github.com/Subaru-PFS/spt_operational_database.git",
    "qadb @ git+https://github.com/Subaru-PFS/spt_qa_database.git",
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["pfs_obsproc_qa"]
include-package-data = true


[tool.setuptools.package-dir]
pfs_obsproc_qa = "src/pfs_obsproc_qa"


[tool.pdm.options]
add = ["--no-isolation"]
install = ["--no-isolation"]


[tool.pdm.scripts]
gen-requirements = { cmd = [
    "pdm",
    "export",
    "--format",
    "requirements",
    "--without-hashes",
    "--pyproject",
    "--dev",
    "--output",
    "requirements.txt",
    "--verbose",
], help = "Generate requirements.txt" }
